# ConfQL

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: example.yml  general.yml
confql/: Cargo.toml  README.md  README.tpl
confql/src/: lib.rs
confql/tests/: all.rs  file_name_as_array_field.rs  file_name_as_array_field_overrides.rs  graphql_schema_macro.rs  happy_with_all_types.rs  hash_key_as_array_field.rs  queryable_schema.rs  renders_types_as_structs.rs
data/: index.yml
data-resolver/: Cargo.toml  README.md  README.tpl
data-resolver/src/: data_path.rs  filters.rs  lib.rs  values.rs
data/teams/: B.yml
example/: Cargo.toml  Dockerfile  Makefile  README.md  base.Dockerfile  build.rs  plain.Dockerfile  schema.gql
example/data/: id.yml
example/src/: graphql.rs  main.rs
fixtures/: Cargo.toml
fixtures/data/heroes/: charles.yml  kevin.yml
fixtures/data/teams/: A.yml
fixtures/src/: lib.rs  models.rs
proc-macro/: Cargo.toml  README.md
proc-macro/src/: lib.rs
proc-macro/src/code_gen/: mod.rs
proc-macro/src/code_gen/types/: fields.rs  mod.rs
proc-macro/tests/: all.rs  executable_schema.rs  file_name_as_array_field.rs  file_name_as_array_field_overrides.rs  graphql_schema_macro.rs  happy_with_all_types.rs  queryable_schema.rs  renders_types_as_structs.rs
src/: data_path.rs  lib.rs
src/code_gen/: mod.rs
src/code_gen/types/: fields.rs  mod.rs
src/data_resolver/: data_path.rs  mod.rs  ng.rs  values.rs
test-files/: Cargo.toml
test-files/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: all.rs  renders_simple_types_as_structs.rs
