[package]
name = "confql"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
graphql-parser = "0.3.0"
juniper = "0.15.7"
proc-macro2 = "1.0.29"
quote = "1.0.9"
thiserror = "1.0.29"

[dev-dependencies]
anyhow = "1.0.44"
indoc = "1.0.3"
tempdir = "0.3.7"
touch = "0.0.1"
trybuild = { version = "1.0", features = ["diff"] }
