[package]
name = "confql"
version = "0.4.0"
edition = "2018"
description = "Procedural macro for creating GraphQL server from yaml file trees and a schema"
license = "MIT"
repository = "https://github.com/olidacombe/confql"
keywords = ["graphql", "yaml"]

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
confql-data-resolver = { version = "0.4.0", path = "../data-resolver" }
confql-proc-macro = { version = "0.4.0", path = "../proc-macro" }
serde_yaml = "0.8.21"

[dev-dependencies]
color-eyre = "0.5.11"
indoc = "1.0.3"
juniper = "0.15.7"
serde = "1.0.130"
test-files = "0.1.0"
trybuild = "1.0.52"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]