[package]
name = "confql-data-resolver"
version = "0.2.0"
edition = "2018"
description = "Internal yaml data resolver for confql"
license = "MIT"
repository = "https://github.com/olidacombe/confql"
keywords = ["graphql", "yaml"]

[dependencies]
itertools = "0.10.1"
juniper = "0.15.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
thiserror = "1.0.29"

[dev-dependencies]
color-eyre = "0.5.11"
indoc = "1.0.3"
test-files = "0.1.0"
test-utils = { path = "../test-utils" }
