[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
confql = { version = "0.1.0", path = "../confql" }
env_logger = "0.9.0"
juniper = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
